# OCR-Backend

./: .gitignore  README.md  database_operations.py  environment.yml  helpers.py  main copy.py  main.py  main_dev.py  motion_detector.py  paddleocrtest.py  patterns.py  pyproject.toml  requirements.txt
PaddleOCR/: .gitignore  detections_with_bbox.csv.REMOVED.git-id  paddleocr.py  requirements.txt
PaddleOCR/tools/infer/: helpers.py  paddleocrtest.py  predict_det.py  predict_rec.py  predict_system.py  predict_system_Man.py  predict_system_RFID2.py  predict_system_multicamera.py  predict_system_multicamera_cardHolder.py  predict_system_multicamera_test.py
database/cruds/: __init__.py  cam_type.py  camera.py  cnic.py  location.py  number_plate_timestamp.py  role.py  timestamp.py  user.py
database/models/: __init__.py  cam_type.py  camera.py  cnic.py  location.py  number_plate_timestamp.py  role.py  timestamp.py  user.py
database/schemas/: __init__.py  cam_type.py  camera.py  cnic.py  location.py  number_plate_timestamp.py  role.py  timestamp.py  user.py
database/utils/: __init__.py  database.py
html/: main.html
patterns/: cnic.py  number_plate.py  patterns.py
