[tool.poetry]
name = "ocr-backend"
version = "0.1.0"
description = "Backend for OCR"
authors = ["Ahmed-Mohiuddin-Shah <mohiuddinlive@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
opencv-python = "^4.10.0.84"
psycopg2 = "^2.9.9"
python-decouple = "^3.8"
requests = "^2.32.3"
pillow = "^10.4.0"
image = "^1.5.33"
paddlepaddle-gpu = "2.6.1"
shapely = "^2.0.5"
pyclipper = "^1.3.0.post5"
scikit-image = "^0.24.0"
imgaug = "^0.4.0"
numpy = "1.26"
lmdb = "^1.5.1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
