[tool.poetry]
name = "OCR-Backend"
version = "0.1.0"
description = "Backend for OCR"
authors = ["Ahmed-Mohiuddin-Shah <mohiuddinlive@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.8"
requests = "^2.32.3"
shapely = "^2.0.4"
pyclipper = "^1.3.0.post5"
scikit-image = "^0.24.0"
imgaug = "^0.4.0"
opencv-python = "^4.10.0.84"
paddleocr = "^2.8.0"
numpy = "^1.26.4"
paddlepaddle-gpu = "2.6.1"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
psycopg2-binary = "2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"